metadata/force-app/main/default/objects/CustomName_FqktW__c/CustomName_FqktW__c.object-meta.xml
<CustomObject>
    <description>Description_tjjOq</description>
    <label>CustomLabel_ULPeS</label>
    <nameField>
        <label>CustomLabel_ULPeS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ULPeSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>