metadata/force-app/main/default/objects/CustomName_FqktW__c/fields/CustomField_mbwXy__c.field-meta.xml
<CustomField>
    <fullName>CustomField_mbwXy__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGWBKd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>