metadata/force-app/main/default/objects/CustomName_FqktW__c/fields/CustomField_PJzTY__c.field-meta.xml
<CustomField>
    <fullName>CustomField_PJzTY__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldQoUoz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>